--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h2>
           If you don't have the time to cook, don't worry <br />Ernest's kitchen
-          got you covered!
+          got you covered! Life is easy
         </h2>
       </div>
 
