--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+zz<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,7 +16,7 @@
 
         <h2>
           If you don't have the time to cook, don't worry <br />Ernest's kitchen
-          got you covered! Life is easy
+          got you covered! Life is eazzzzzzzyyyyy
         </h2>
       </div>
 
